--- a/Oct9_StudnetForm/studentform.html
+++ b/Oct9_StudnetForm/studentform.html
@@ -1,44 +1,62 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Student Registration Form</title>
-        <link rel="stylesheet" href="student.css">
-    </head>
-    <body>
-        <div class="registration-form">
-            <h2>Student Registration</h2>
-            <form>
-                <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student Registration Form</title>
+    <link rel="stylesheet" href="student.css">
+</head>
+<body>
+    <div class="container">
+        <h2>Student Registration Form</h2>
+        <form action="#" method="POST">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="age">Age:</label>
+                <input type="number" id="age" name="age" required>
+            </div>
+            <div class="form-group">
+                <label>Gender:</label>
+                <div class="gender-radio">
+                    <label for="male"><input type="radio" id="male" name="gender" value="Male" required> Male</label>
+                    <label for="female"><input type="radio" id="female" name="gender" value="Female" required> Female</label>
+                    <label for="other"><input type="radio" id="other" name="gender" value="Other" required> Other</label>
                 </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="course">Course:</label>
-                    <select id="course" name="course" required>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="address">Address:</label>
-                    <input type="text" id="address" name="address" required>
-                </div>
-                <div class="form-group">
-                    <label for="fees">Fees Amount:</label>
-                    <input type="text" id="fees" name="fees" required>
-                </div>
-                <div class="form-group discount">
-                    <label for="discount">Discount:</label>
-                    <input type="text" id="discount" name="discount">
-                    <label for="facultyId">Faculty ID:</label>
-                    <input type="text" id="facultyId" name="facultyId">
-                </div>
-                <button type="submit" class="btn-submit" onclick="captureUserEnteredDetails()">Submit</button>
-            </form>
-        </div>
-        <script src="student.js">         
-        </script>
-    </body>
+            </div>
+            <div class="form-group">
+                <label for="course">Course Type:</label>
+                <select id="course" name="course" required>              
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="address">Address:</label>
+                <textarea id="address" name="address" rows="3" required></textarea>
+            </div>
+            <div class="form-group">
+                <label for="fees">Fees:</label>
+                <input type="number" id="fees" name="fees" required>
+            </div>
+            <div class="form-group">
+                <label for="discount">Discount:</label>
+                <input type="number" id="discount" name="discount">
+            </div>
+            <div class="form-group">
+                <label for="faculty">Faculty Name:</label>
+                <input type="text" id="faculty" name="faculty">
+            </div>
+            <div class="form-button">
+                <button type="submit" onclick="onSubmitClick()">Submit</button>
+            </div>
+        </form>       
+    </div>  
+    <script src="student.js">        
+    </script>
+</body>
 </html>
