--- a/Flazon/WebApp/flazon_products.html
+++ b/Flazon/WebApp/flazon_products.html
@@ -1,54 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Grid</title>
     <style>
         .product-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             gap: 20px;
         }
+        
         .product {
             border: 1px solid #ccc;
             padding: 10px;
-            text-align: center;
+        }
+
+        .product img {
+            max-width: 100%;
+        }
+
+        header {
+            background-color: rgb(30, 74, 112);
+            color: #fff;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        /* Style for user options */
+        .user-options {
+            float: right;
+        }
+
+        .search-bar {
+            width: 300px;
+            padding: 5px;
+            border: none;
+            border-radius: 4px;
+        }
+
+        /* Style for the login button */
+        .login-button {
+            background-color: #007bff;
+            color: #fff;
+            padding: 5px 10px;
+            border: none;
+            border-radius: 4px;
             cursor: pointer;
         }
-        .product:hover {
-            background-color: #f0f0f0;
-        }
-        .product-details {
-            display: none;
-        }
+
     </style>
 </head>
 <body>
+
+    <header>
+        <h1 style="text-align: center;">Flazon</h1>
+        <div class="user-options">
+            <!-- User Options Here -->
+        </div>
+        <input type="text" class="search-bar" placeholder="Search...">
+        <button class="login-button">Login</button>
+    </header>
+    <br><br>
     <div class="product-grid">
-        <div class="product" onclick="showProductDetails('Product 1')">Product 1</div>
-        <div class="product" onclick="showProductDetails('Product 2')">Product 2</div>
-        <div class="product" onclick="showProductDetails('Product 3')">Product 3</div>
-        <div class="product" onclick="showProductDetails('Product 4')">Product 4</div>
-        <!-- Add more product items as needed -->
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product1.jpg" alt="Product 1">
+            <h2>Product Name 1</h2>
+            <p>Category: Category 1</p>
+            <p>Cost: $19.99</p>
+        </div>
+        <div class="product">
+            <img src="product2.jpg" alt="Product 2">
+            <h2>Product Name 2</h2>
+            <p>Category: Category 2</p>
+            <p>Cost: $29.99</p>
+        </div>
+        <!-- Add more product entries here -->
     </div>
-
-    <div class="product-details" id="productDetails">
-        <h2>Product Details</h2>
-        <p id="productDetailsContent"></p>
-    </div>
-
-    <script>
-        function showProductDetails(productName) {
-            const productDetails = document.getElementById('productDetails');
-            const productDetailsContent = document.getElementById('productDetailsContent');
-
-            // Update the content of the product details screen
-            productDetailsContent.textContent = `Details for ${productName}`;
-
-            // Show the product details screen
-            productDetails.style.display = 'block';
-        }
-    </script>
+    <script src="products.js"></script>
 </body>
 </html>
