--- a/Flazon/WebApp/flazon_products.html
+++ b/Flazon/WebApp/flazon_products.html
@@ -61,73 +61,7 @@
         <button class="login-button">Login</button>
     </header>
     <br><br>
-    <div class="product-grid">
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product1.jpg" alt="Product 1">
-            <h2>Product Name 1</h2>
-            <p>Category: Category 1</p>
-            <p>Cost: $19.99</p>
-        </div>
-        <div class="product">
-            <img src="product2.jpg" alt="Product 2">
-            <h2>Product Name 2</h2>
-            <p>Category: Category 2</p>
-            <p>Cost: $29.99</p>
-        </div>
+    <div class="product-grid" id="product-grid">               
         <!-- Add more product entries here -->
     </div>
     <script src="products.js"></script>
