login & registration fields captured

--- a/Flazon/WebApp/flazon_products.html
+++ b/Flazon/WebApp/flazon_products.html
@@ -58,7 +58,7 @@
             <!-- User Options Here -->
         </div>
         <input type="text" class="search-bar" placeholder="Search...">
-        <button class="login-button">Login</button>
+        <button class="login-button" onclick="moveTologin()">Login</button>
     </header>
     <br><br>
     <div class="product-grid" id="product-grid">               
