--- a/Flazon/WebApp/flazon_login.html
+++ b/Flazon/WebApp/flazon_login.html
@@ -49,22 +49,28 @@
 <body>
     <div class="login-form">
         <h1>Flazon Login</h1>
-        <form action="your-server-endpoint.php" method="post">
+        <form>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <br>
-            <button type="submit">Login</button>
+            <button type="submit" onclick="captureLoginDetails()">Login</button>
 
             <label onclick="moveToRegistration()">Registration</label>
         </form>
     </div>
-
     <script>
         function moveToRegistration(){
-            window.location.href = "flazon_user_rgistration.html"
+           window.location.href = "flazon_user_rgistration.html"
+        }
+        function captureLoginDetails(){
+            emailField = document.getElementById('email');
+            passwordField = document.getElementById('password')
+
+            console.log(emailField.value)
+            console.log(passwordField.value)
         }
     </script>
 </body>
