cart View added

--- a/Flazon/WebApp/flazon_products.html
+++ b/Flazon/WebApp/flazon_products.html
@@ -58,6 +58,7 @@
             <!-- User Options Here -->
         </div>
         <input type="text" class="search-bar" placeholder="Search...">
+       <a href="cart_view.html"> <img src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" height="40px" width="40px"></a>
         <button class="login-button" onclick="moveTologin()">Login</button>
     </header>
     <br><br>
