--- a/Flazon/WebApp/flazon_products.html
+++ b/Flazon/WebApp/flazon_products.html
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-
+    <div id="myDiv">My DIV</div>
     <header>
         <h1 style="text-align: center;">Flazon</h1>
         <div class="user-options">
