--- a/Flazon/WebApp/product_details.html
+++ b/Flazon/WebApp/product_details.html
@@ -51,7 +51,7 @@
         </div>        
     </div>
     <div style="text-align: center;">
-    <button style="background-color: blanchedalmond;" onclick="cartItems()">Add to Cart </button>
+    <button style="background-color: blanchedalmond;" onclick="addItemtoCart()">Add to Cart </button>
     </div>
 
     <script src="productDetails.js"></script>
