cart view added remove also added

--- a/Flazon/WebApp/cart_view.html
+++ b/Flazon/WebApp/cart_view.html
@@ -27,94 +27,7 @@
         <button class="login-button" onclick="moveTologin()">Login</button>
     </header>
 
-    <div class="cart-items" style="display: grid; grid-template-columns: 1fr; border-color: aqua; border-width: 1px;" >        
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-
-
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-
-
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-
-        <div class="item"> 
-            <div class="item" style="border: 1px; border-color: blue; display: flex; margin-top: 20px;">
-                <img  src="https://png.pngtree.com/element_our/20190531/ourmid/pngtree-shopping-cart-convenient-icon-image_1287807.jpg" width="150px" height="150px">
-                <div >
-                    <div><label>Name</label></div>
-                    <div><label>Cost</label></div>
-                    <div><label>Discount</label></div>
-                </div>           
-            </div>
-            <div> <button>Remove from Cart</button></div>
-        </div>
-       
-
+    <div class="cart-items"  id="cart-list" style="display: grid; grid-template-columns: 1fr; border-color: aqua; border-width: 1px;" >        
         
     </div>
     <script src="cart-view.js"></script>
